Fix spacing with period dropdown

--- a/src/styles/pages/sites/[site_id]/_analytics.scss
+++ b/src/styles/pages/sites/[site_id]/_analytics.scss
@@ -28,7 +28,7 @@
 
       .select {
         margin: 0 0 0 1rem;
-        width: 140px;
+        width: 160px;
       }
     }
   }
