--- a/src/styles/pages/sites/[site_id]/_overview.scss
+++ b/src/styles/pages/sites/[site_id]/_overview.scss
@@ -32,12 +32,6 @@
   }
 
   .empty {
-    .heading {
-      .period {
-        display: none;
-      }
-    }
-
     .empty-state {
       display: flex;
     }
